syntax = "proto3";

package def.match.notify.opcode;

option java_package = "com.commelina.math24.play.match.proto";
option java_outer_classname = "NotifyOpcodeProtos";
option java_multiple_files = true;

enum NOTIFY_OPCODE {
    NOTIFY_MATCH_SUCCESS = 0;
    MATCH_STATUS = 1;
    JOIN_MATCH_TEMPORARY_ROOM = 2;
}

message MATCH_STATUS_BRD {
    uint32 matchPeople = 1;
}

// 加入临时房间通知消息
message JOIN_MATCH_TEMPORARY_ROOM_BRD {
    uint64 roomId = 1;
}